--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,13 @@ target_compile_options(${PROJECT_NAME} PRIVATE
         $<$<COMPILE_LANGUAGE:CXX>:${PROJECT_WARNINGS_CXX}>
     >
 )
-
-target_sources(${PROJECT_NAME} PRIVATE main.cpp)
+target_include_directories(${PROJECT_NAME} PRIVATE
+    "${CMAKE_SOURCE_DIR}/include"
+    "${PROJECT_BINARY_DIR}"
+)
+target_sources(${PROJECT_NAME} PRIVATE
+    src/main.cpp
+)
 target_link_libraries(
     ${PROJECT_NAME} PRIVATE
     TBB::tbb
